--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -18,41 +18,55 @@
 	<title>welcome to erp</title>
 </head>
 
-<body class="login-body">
-	<div id="login">
-		<h3 class="text-center text-white pt-5"></h3>
-		<div class="container">
-			<div id="login-row" class="row justify-content-center align-items-center">
+<body>
 
+<form th:action="@{/doLogin}" method="POST">
 
-				<div id="login-column" class="col-md-6 pt-3 shadow-lg bg-white" style="border-radius: 30px;">
+<section class="vh-100" style="background-color: #508bfc;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card shadow-2-strong" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
 
-					<div id="login-box" class="col-md-12">
+            <h3 class="mb-5">Sign in</h3>
 
-						<form id="login-form" class="form" action="#" th:action="@{/doLogin}" method="post">
-							<h3 class="text-center text-info">Login</h3>
-							<div class="form-group">
-								<label for="username" class="text-info">Username:</label><br>
-								<input type="text" name="username" id="username" class="form-control">
-							</div>
-							<div class="form-group">
-								<label for="password" class="text-info">Password:</label><br>
-								<input type="text" name="password" id="password" class="form-control">
-							</div>
-							<div class="form-group">
-								<label for="remember-me" class="text-info"><span>Remember me</span> <span><input
-											id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-								<input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-							</div>
+            <div class="form-outline mb-4">
+              <input type="text" id="typeEmailX-2" class="form-control form-control-lg" name="username"/>
+              <label class="form-label" for="typeEmailX-2" >Email</label>
+            </div>
 
-						</form>
+            <div class="form-outline mb-4">
+              <input type="password" id="typePasswordX-2" class="form-control form-control-lg" name="password"/>
+              <label class="form-label" for="typePasswordX-2" >Password</label>
+            </div>
 
+            <!-- Checkbox -->
+            <div class="form-check d-flex justify-content-start mb-4">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="form1Example3"
+              />
+              <label class="form-check-label" for="form1Example3"> Remember password </label>
+            </div>
 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+            <hr class="my-4">
+
+           
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+</form>
+
 </body>
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
