--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -1,52 +1,93 @@
 <!DOCTYPE html>
- 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
-                                                
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<script type="text/javascript" th:src="@{/js/settings.js}"></script>
+<script type="text/javascript" th:src="@{/js/app.js}"></script>
+<link rel="stylesheet" type="text/css" th:href="@{/css/modern.css}" />
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>
+<script type="text/javascript" th:src="@{/js/myJavaScript.js}"></script>
+
+<style>
+body {
+	opacity: 0;
+}
+
+.uppercase {
+	text-transform: uppercase;
+}
+
+.my-error-class {
+	color: #FF0000;
+	font-size: 12px;
+	/* red */
+}
+</style>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() {
+		dataLayer.push(arguments);
+	}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-120946860-7');
+</script>
 <head>
-    <title>Title of Home Page</title>
-     
-    <th:block id="home-static-resources">
-       
-        <script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
-        <link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}"/>
-       
-    </th:block>
-     
+<meta charset="utf-8" />
+<title>HRMS</title>
 </head>
 <body>
- 
-    <div id="home-header">
-        
-        eBs
-        
-    </div>
-     
-     
-    <div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">
-        Home Nav
-    </div>
- 
-    <div id="home-main-content">
-        
-        
-        
-        
-    </div>
-     
-     
-    <!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-     
-     
+	<div class="wrapper">
+	
+		<nav id="sidebar" class="sidebar" aria-label="Site sidebar">
+			<div th:replace="fragments/sidebar :: div"></div>
+		</nav>
+		
+		
+		<div class="main">
+			<div th:replace="fragments/header ::div"></div>
+			<main class="content">
+				<div class="container-fluid">
+					<div class="header">
+						<h1 class="header-title">Index</h1>
+						<nav aria-label="breadcrumb"></nav>
+					</div>
+					<div class="row">
+						<div class="col-12">
+							<div class="card">
+								<div class="card-header" style="background: #f4f7fc;">
+									<h6 class="card-title"
+										style="text-decoration: underline; color: #dc2eaf;">Acts</h6>
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
+								</div>
+								<div class="card-body">
+									
+									<!--main content -->
+									
+									
+									<h1>dhfgksdfkd</h1>
+									
+									
+								</div>
+
+							</div>
+						</div>
+						
+
+					</div>
+				</div>
+
+			</main>
+			<footer class="footer">
+				<div th:replace="fragments/footer :: div"></div>
+			</footer>
+		</div>
+	</div>
+	
 </body>
 </html>
