--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,23 +1,7 @@
-
-
-
-	<div class="container-fluid">
-		<div class="row text-muted" style="background-color: #0f2d48!important;">
-			<div class="col-8 text-left">
-				<ul class="list-inline">
-					<li class="list-inline-item"><a style="color: #ffffff!important;" class="text-muted" href="#">Support</a>
-					</li>
-					<li class="list-inline-item"><a  style="color: #ffffff!important;"class="text-muted" href="#">Privacy</a>
-					</li>
-					<li class="list-inline-item"><a style="color: #ffffff!important; " class="text-muted" href="#">Terms
-							of Service</a></li>
-					<li class="list-inline-item"><a  style="color: #ffffff!important;" class="text-muted" href="#">Contact</a>
-					</li>
-				</ul>
-			</div>
-			<div class="col-4 text-right" style="color: #ffffff!important;">
-				<p class="mb-0">
-					copy&copy;right 2021 - <a  style="color: #ffffff!important; "href="#" class="text-muted">HRMS</a>
-				</p>
-			</div>
-		</div>
+<footer class="main-footer">
+	<div class="pull-right hidden-xs">
+		<b>Version</b> 2.3.0
+	</div>
+	<strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
+	reserved.
+</footer>
