--- a/src/main/resources/templates/layouts/Master/city.html
+++ b/src/main/resources/templates/layouts/Master/city.html
@@ -1,172 +1,126 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<script type="text/javascript" th:src="@{/js/settings.js}"></script>
-<script type="text/javascript" th:src="@{/js/app.js}"></script>
-<link rel="stylesheet" type="text/css" th:href="@{/css/modern.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" />
-<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css" rel="stylesheet" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
-
-<script src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>
-<!--<script type="text/javascript" th:src="@{../js/myJavaScript.js}"></script>-->
-
-<style>
-	body {
-		opacity: 0;
-	}
-
-	.uppercase {
-		text-transform: uppercase;
-	}
-
-	.my-error-class {
-		color: #FF0000;
-		font-size: 12px;
-		/* red */
-	}
-</style>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() {
-		dataLayer.push(arguments);
-	}
-	gtag('js', new Date());
-
-	gtag('config', 'UA-120946860-7');
-</script>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="utf-8" />
-	<title>HRMS</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>AdminLTE 2 | General Form Elements</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css">
+
 </head>
 
-<body>
+<body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
-
-		<nav id="sidebar" class="sidebar" aria-label="Site sidebar">
-			<div th:replace="fragments/sidebar :: div"></div>
-		</nav>
-
-
-		<div class="main">
-			<div th:replace="fragments/header ::div"></div>
-			<main class="content">
-				<div class="container-fluid">
-					<div class="header">
-						<h1 class="header-title">Index</h1>
-						<nav aria-label="breadcrumb"></nav>
-					</div>
-					<div class="row">
-						<div class="col-12">
-							<div class="card">
-								<div class="card-header" style="background: #f4f7fc;">
-									<h6 class="card-title" style="text-decoration: underline; color: #dc2eaf;">Acts</h6>
-									<input type="hidden" id="mess" name="mess" th:value="${message}">
-								</div>
-								<div class="card-body">
-
-									<!--main content -->
-
-
-									<form th:action="@{/city/}" method="POST" th:object="${city}">
-			<div class="form-border">
-
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+			<section class="content-wrapper">
 				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">City Code</label> <input type="text"
-							class="form-control" placeholder="city code"
-							th:field="*{cityCode}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputPassword4">City Name</label> <input type="text"
-							class="form-control" placeholder="city name"
-							th:field="*{cityName}">
-					</div>
-
-				</div>
-
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Region Code</label> <input type="text"
-							class="form-control" placeholder="region code"
-							th:field="*{regionCode}">
-					</div>
-
-					<div class="form-group col-lg-6">
-						<label class="form-label">State</label> <label
-							style="color: red">*</label> <select class="form-control"
-							
-							title="state Name" required th:field="*{state}">
-							<option value="">Select State</option>
-							<option th:each="state :  ${stateList}"
-								th:text="${state.stateName}"
-								th:value=" ${state.stateCode}"></option>
-						</select>
-					</div>
-
-				</div>
-				
-				<div class="row">
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">District</label> <input type="text"
-							class="form-control" placeholder="district"
-							th:field="*{district}">
-					</div>
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">City Type</label> <input type="text"
-							class="form-control" placeholder="city type"
-							th:field="*{cityType}">
-					</div>
-
-					
-
-				</div>
-
-
-
-				<div class="form-group" style="margin: 10px;">
-
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
-							class="form-check-label" for="inlineRadio1"
-							th:field="*{activeYn}">Active</label>
-					</div>
-
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio"
-							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
-							class="form-check-label" for="inlineRadio1"
-							th:field="*{activeYn}">In-Active</label>
-					</div>
-
-				</div>
-
-				<div class="row" style="margin: 10px">
-					<input type="submit" value="Submit" class="btn btn-primary" />
-					<input type="reset" value="Reset" class="btn btn-danger" />
-				</div>
-
-			</div>
-		</form>
-
-
-								</div>
-
-							</div>
+					<!-- left column -->
+					<div class="col-md-12">
+						<div class="col-md-3">
 						</div>
 
 
+						<div class="col-md-6" style="margin-top: 20px;">
+							<!-- general form elements -->
+							<div class="box box-primary">
+								<div class="box-header with-border">
+									<h3 class="box-title">City Master</h3>
+								</div><!-- /.box-header -->
+								<!-- form start -->
+								<form role="form" th:action="@{/city/}" method="POST" th:object="${city}">
+									<div class="box-body">
+
+										<div class="form-group col-md-6">
+											<label>City Code</label> <input type="text" class="form-control"
+												placeholder="city code" th:field="*{cityCode}">
+										</div>
+
+										<div class="form-group col-md-6">
+											<label>City Name</label> <input type="text" class="form-control"
+												placeholder="city name" th:field="*{cityName}">
+										</div>
+
+
+										<div class="form-group col-md-12">
+											<label>Region Code</label> <input type="text" class="form-control"
+												placeholder="region code" th:field="*{regionCode}">
+										</div>
+
+										<div class="form-group col-md-12">
+											<label>State</label> <label style="color: red">*</label> <select
+												class="form-control" title="state Name" required th:field="*{state}">
+												<option value="">Select State</option>
+												<option th:each="state :  ${stateList}" th:text="${state.stateName}"
+													th:value=" ${state.stateCode}"></option>
+											</select>
+										</div>
+
+
+										<div class="form-group col-md-6">
+											<label for="inputEmail4">District</label> <input type="text"
+												class="form-control" placeholder="district" th:field="*{district}">
+										</div>
+										<div class="form-group col-md-6">
+											<label for="inputEmail4">City Type</label> <input type="text"
+												class="form-control" placeholder="city type" th:field="*{cityType}">
+										</div>
+
+										<div class="form-group" style="margin: 10px;">
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="Y"> <label class="form-check-label"
+													for="inlineRadio1" th:field="*{activeYn}">Active</label>
+											</div>
+
+											<div class="form-check form-check-inline">
+												<input class="form-check-input" type="radio" name="inlineRadioOptions"
+													id="inlineRadio1" value="N"> <label class="form-check-label"
+													for="inlineRadio1" th:field="*{activeYn}">In-Active</label>
+											</div>
+
+										</div>
+
+
+										
+
+
+
+									</div><!-- /.box-body -->
+
+									
+									<div class="box-footer" style="margin: 10px">
+											<input type="submit" value="Submit" class="btn btn-primary" />
+											<input type="reset" value="Reset" class="btn btn-danger" />
+										</div>
+										
+										
+								</form>
+							</div><!-- /.box -->
+						</div>
+
+
+						<div class="col-md-3">
+						</div>
 					</div>
+
 				</div>
+			</section>
 
-			</main>
-			<footer class="footer">
-				<div th:replace="fragments/footer :: div"></div>
-			</footer>
-		</div>
-	</div>
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/app.min.js"></script>
 
+			<script src="../../js/demo.js"></script>
 </body>
 
 </html>
