--- a/src/main/resources/templates/layouts/dummyFile.html
+++ b/src/main/resources/templates/layouts/dummyFile.html
@@ -1,49 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head xmlns:th="http://www.thymeleaf.org">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>AdminLTE 2 | General Form Elements</title>
-
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
 	<link rel="stylesheet" href="css/AdminLTE.min.css">
-
 	<link rel="stylesheet" href="css/skins/_all-skins.min.css">
-
 
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
 	<div class="wrapper">
-
-
-
-
-
 		<div>
-
 			<div th:replace="fragments/header :: header">...</div>
-
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-
 			<section class="content-wrapper">
 				<div class="row">
 					<!-- left column -->
 					<div class="col-md-12">
 						<div class="col-md-3">
 						</div>
-
-
-
-
+						
+						
 						<div class="col-md-6">
 							<!-- general form elements -->
 							<div class="box box-primary">
@@ -53,49 +36,19 @@
 								<!-- form start -->
 								<form role="form">
 									<div class="box-body">
-
-
-										<div class="form-group">
-											<label for="exampleInputEmail1">Email address</label>
-											<input type="email" class="form-control" id="exampleInputEmail1"
-												placeholder="Enter email">
-										</div>
-										<div class="form-group">
-											<label for="exampleInputPassword1">Password</label>
-											<input type="password" class="form-control" id="exampleInputPassword1"
-												placeholder="Password">
-										</div>
-										<div class="form-group">
-											<label for="exampleInputFile">File input</label>
-											<input type="file" id="exampleInputFile">
-											<p class="help-block">Example block-level help text here.</p>
-										</div>
-
-
-										<div class="checkbox">
-											<label>
-												<input type="checkbox"> Check me out
-											</label>
-										</div>
-
-
 									</div><!-- /.box-body -->
 
 									<div class="box-footer">
 										<button type="submit" class="btn btn-primary">Submit</button>
 									</div>
 
-
 								</form>
 							</div><!-- /.box -->
 						</div>
-
-
-
+						
+						
 						<div class="col-md-3">
 						</div>
-
-
 					</div>
 
 				</div>
@@ -105,25 +58,6 @@
 			<!--   <section class="content">
         
         </section>-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-			<script src="../../plugins/jQuery/jQuery-2.1.4.min.js"></script>
-
-			<script src="../../bootstrap/js/bootstrap.min.js"></script>
-
-			<script src="../../plugins/fastclick/fastclick.min.js"></script>
-
 			<script src="js/app.min.js"></script>
 
 			<script src="/js/demo.js"></script>
